<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="interstitial_ad_unit_id">Your Ad Id Here!</string>
    <string name="banner_ad_unit_id">Your Ad Id Here!</string>
    
    <string name="app_name">Quick Notes</string>
    <string name="title_activity_add_note">Add Note</string>
    <string name="title_activity_edit_note">Details</string>

     <string name="app_description">
        QuickNotes is a simple, easy to use note taking application.
    </string>

    <string name="app_copyright">
        Copyright &#169; Hussain Al-Derry 2016
    </string>

    <string name="acra_crash_msg">
        An error has forced the application to stop.
        Sending a report to help solve the issue &#8230;
    </string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>All Notes</item>
        <item>New Note</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_list</item>
        <item>@drawable/ic_add</item>
        <item>@drawable/ic_settings</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- Share url to your app -->
    <string name="app_url">http://play.google.com/store/apps/details?id=</string>
    <string name="settings">Settings</string>
    <string name="hint_note_title">Title</string>
    <string name="hint_note_text">Text</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_save">SAVE</string>
    <string name="button_about">About</string>
    <string name="button_rate">Rate This App</string>
    <string name="button_theme_color">Change Theme Color</string>
    <string name="color_theme_picker">Color Theme Picker</string>
    <string name="button_update">UPDATE</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="msg_editing_enabled">Editing Enabled</string>


    <!-- Example Notes Titles -->
	<string-array name="notes_titles">
	    <item >Welcome!</item>
	</string-array>
	
	<!--Starting oldNote content -->
	<string-array name="notes_content">
	    <item >Hello, and thank you for downloading this app!</item>
	</string-array>

</resources>