<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp" >

            <LinearLayout
                android:id="@+id/color_picker"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/button_theme_color"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <include layout="@layout/settings_items_separator" />

            <LinearLayout
                android:id="@+id/lyt_rate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/button_rate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black" />
            </LinearLayout>

            <include layout="@layout/settings_items_separator" />

            <LinearLayout
                android:id="@+id/lyt_libs"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open_source_libraries"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <include layout="@layout/settings_items_separator" />

            <LinearLayout
                android:id="@+id/lyt_about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/layout_click"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_about"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <include layout="@layout/settings_items_separator" />

        </LinearLayout>

    </ScrollView>
    
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</LinearLayout>